--- a/src/app/app.css
+++ b/src/app/app.css
@@ -4,8 +4,8 @@
 
 .navbar {
   background-color: #ffffff;
-  border-bottom: 2px solid #fce4ec; /* Pink border */
-  color: #ad1457; /* Deep pink text */
+  border-bottom: 2px solid #fce4ec;
+  color: #ad1457; 
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
